fix horizontal scrolling on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,14 @@
   box-sizing: border-box;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
+body {
+    position: relative
+}
+
 .form-select{
     &:focus{
     outline: solid $color-gray-light;
